--- a/index.html
+++ b/index.html
@@ -4,9 +4,39 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Countdown</title>
+  <!-- Google Font -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;800&display=swap" />
+  <!-- Stylesheet -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  
+  <div class="container">
+    <div class="heading">
+      <h2></h2>
+      <h3>Countdown To New Year <br>Countdown Till:</h3>
+      <h1>2024</h1>
+    </div>
+    <div class="countdown">
+      <div class="box">
+        <span class="num" id="day-box">00</span>
+        <span class="text">Days</span>
+      </div>
+      <div class="box">
+        <span class="num" id="hr-box">00</span>
+        <span class="text">Hours</span>
+      </div>
+      <div class="box">
+        <span class="num" id="min-box">00</span>
+        <span class="text">Minutes</span>
+      </div>
+      <div class="box">
+        <span class="num" id="sec-box">00</span>
+        <span class="text">Seconds</span>
+      </div>
+    </div>
+  </div>
+  <!-- Script -->
+  <script src="script.js"></script>
 </body>
 </html>
